src/objects/CRM_WF_Bases__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Fecha_Alta_Publico_Objetivofm__c</fullName>
        <formula>CRM_WF_Nombre_De_Carta_Recurrente__r.CRM_WF_Carta_Origen_C_Recurrente__r.CRM_WF_Campana_Carta_Custodia__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de alta del publico objetivo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Fin_Publico_Objetivofm__c</fullName>
        <formula>CRM_WF_Nombre_De_Carta_Recurrente__r.CRM_WF_Carta_Origen_C_Recurrente__r.CRM_WF_Campana_Carta_Custodia__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha fin del publico objetivo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Folio_Base__c</fullName>
        <formula>CRM_WF_Nombre_De_Carta_Recurrente__r.CRM_WF_Folio_Carta_Recurrente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folio de la Base</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_De_Carta_Recurrente__c</fullName>
        <label>Nombre de Carta Recurrente</label>
        <referenceTo>CRM_WF_Cartas_Recurrentes__c</referenceTo>
        <relationshipLabel>Bases</relationshipLabel>
        <relationshipName>Bases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_Registros_Por_Base__c</fullName>
        <label>Total de registros por Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Treatment_Code__c</fullName>
        <label>Treatment code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Base</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de la Base</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>